Use a vertical-spacing variable to ensure consistency across vertical-padding/margins

--- a/inst/ui-editor-react/src/App.css
+++ b/inst/ui-editor-react/src/App.css
@@ -54,8 +54,9 @@
   );
   --layout-properties-panel-w: 275px;
 
-  --selected-border-width: 3px;
   --corner-radius: 10px;
+  --vertical-spacing: 10px;
+  --selected-border-width: 3px;
   --card-header-height: 35px;
   --animation-speed: 0.2s;
   --animation-curve: ease-in-out;
