--- a/inst/ui-editor-react/src/SettingsPanel/SettingsPanel.module.css
+++ b/inst/ui-editor-react/src/SettingsPanel/SettingsPanel.module.css
@@ -1,5 +1,5 @@
 .settingsPanel {
-  --vertical-gap: 10px;
+  --vertical-gap: var(--vertical-spacing);
   display: flex;
   flex-direction: column;
   padding-inline: 16px;
@@ -11,7 +11,7 @@
   /* Don't let the path size change */
   flex-shrink: 0;
   /* Add padding on the bottom so our whitespace on top and bottom is equal */
-  padding-bottom: 10px;
+  padding-bottom: var(--vertical-gap);
 }
 
 form.settingsForm {
@@ -49,7 +49,7 @@ form.settingsForm {
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  gap: 10px;
+  gap: var(--vertical-spacing);
 }
 
 .buttonsHolder > Button {
