--- a/inst/ui-editor-react/src/components/Inputs/Inputs.module.css
+++ b/inst/ui-editor-react/src/components/Inputs/Inputs.module.css
@@ -5,7 +5,7 @@ input {
 }
 
 .container {
-  --vertical-pad: 10px;
+  --vertical-pad: var(--vertical-spacing);
   margin-top: var(--vertical-pad);
   margin-bottom: var(--vertical-pad);
   max-width: 100%;
